--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,12 @@
 		{
 			"src":"/bot.py",
 			"use":"@vercel/python"
+    			"config": { "runtime": "python3.9" }
 		}
 	],
 	"routes":[
 		{
-			"src":"/(.*)",
+			"src":"/",
 			"dest":"/bot.py"
 		}
 
