--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
 	"builds":[
 		{
 			"src":"/bot.py",
-			"use":"@vercel/python"
+			"use":"@vercel/python",
     			"config": { "runtime": "python3.9" }
 		}
 	],
